--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
     
-    <!-- Correction: Changed 'xintegrity' attribute to the correct 'integrity' for Subresource Integrity checking -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
@@ -700,6 +699,50 @@ Portofolio ini menyajikan proyek-proyek yang berdiri di atas bahu para raksasa s
                     </div>
                 </section>
 
+                <section id="pendidikan-page" class="page hidden">
+                    <header class="text-center py-8">
+                        <div class="container mx-auto px-6">
+                            <div class="border-y-4 border-double border-[#967259] py-2">
+                                 <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">The Engineering Times</h1>
+                                 <div class="text-sm tracking-widest flex flex-col md:flex-row justify-center md:justify-between items-center">
+                                     <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
+                                     <span class="live-datetime mt-2 md:mt-0"></span>
+                                 </div>
+                            </div>
+                        </div>
+                    </header>
+                    <div class="fancy-divider"></div>
+                    <div class="article-frame animate-on-scroll">
+                        <h3 class="text-3xl font-bold mb-8 text-center">Riwayat Pendidikan</h3>
+                        <div class="space-y-8 max-w-3xl mx-auto">
+                            <div class="pl-8 border-l-2 border-[#967259] relative">
+                                <div class="absolute -left-[9px] top-1 w-4 h-4 bg-[#F0EAD6] border-2 border-[#967259] rounded-full"></div>
+                                <h4 class="text-2xl font-bold">Universitas Amikom Yogyakarta – S1 Teknik Informatika</h4>
+                                <p class="text-md mb-2 italic">September 2019 – Juni 2023 (Cumlaude, IPK 3.83, Lulus dalam 3 tahun 9 bulan)</p>
+                                <ul class="list-disc list-outside ml-5 space-y-2 text-justify">
+                                    <li>
+                                        <strong>Pemrograman dan Rekayasa Perangkat Lunak:</strong> Menguasai Rekayasa Perangkat Lunak, Pemrograman Web, Algoritma dan Pemrograman, serta Struktur Data untuk membangun aplikasi yang efisien dan terstruktur.
+                                    </li>
+                                    <li>
+                                        <strong>Data dan Analisis:</strong> Memiliki pemahaman dalam Sistem Basis Data, Kecerdasan Buatan (AI), Statistika, dan Metode Numerik untuk pengolahan dan analisis data.
+                                    </li>
+                                    <li>
+                                        <strong>Jaringan dan Keamanan:</strong> Kompeten dalam Keamanan Jaringan, Perancangan Jaringan, Jaringan Komputer Lanjutan, dan Infrastruktur IT.
+                                    </li>
+                                    <li>
+                                        <strong>Soft Skills dan Manajemen:</strong> Dibekali dengan pengetahuan Manajemen Strategik, Kepemimpinan, Metodologi Penelitian, dan Etika Profesi untuk mendukung kerja tim dan profesionalisme.
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="pl-8 border-l-2 border-[#967259] relative">
+                                <div class="absolute -left-[9px] top-1 w-4 h-4 bg-[#F0EAD6] border-2 border-[#967259] rounded-full"></div>
+                                <h4 class="text-2xl font-bold">SMA Negeri 1 Palopo – Jurusan IPA</h4>
+                                <p class="text-md mb-1 italic">2009 – 2012</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
                 <section id="sertifikasi-page" class="page hidden">
                     <header class="text-center py-8">
                         <div class="container mx-auto px-6">
@@ -796,6 +839,9 @@ Portofolio ini menyajikan proyek-proyek yang berdiri di atas bahu para raksasa s
                         </a></li>
                         <li><a href="#projects-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
                             <i class="fas fa-laptop-code mr-4 w-6 text-center"></i><span class="nav-text">Laporan Utama</span>
+                        </a></li>
+                        <li><a href="#pendidikan-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
+                            <i class="fas fa-graduation-cap mr-4 w-6 text-center"></i><span class="nav-text">Latar Pendidikan</span>
                         </a></li>
                         <li><a href="#sertifikasi-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
                             <i class="fas fa-award mr-4 w-6 text-center"></i><span class="nav-text">Sertifikasi</span>
@@ -1307,3 +1353,4 @@ Portofolio ini menyajikan proyek-proyek yang berdiri di atas bahu para raksasa s
 
 </body>
 </html>
+
