--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                                     Di masa lampau, jual beli mobil bekas kerap dilakukan secara konvensional melalui iklan koran. Seiring kemajuan teknologi, proses ini beralih ke platform online, namun menyisakan tantangan keamanan dan efisiensi. Studi kasus ini menganalisis modernisasi proses jual beli mobil bekas, dari era klasik ke digital, dengan fokus pada pengembangan sistem informasi inovatif untuk menciptakan ekosistem yang transparan dan aman.
                                 </p>
                                 <div class="text-right mt-6">
-                                    <button data-modal-target="#mobilbekas-modal" class="classic-button text-sm py-2 px-4">Baca Studi Kasus</button>
+                                    <a href="https://affinecipher-0.github.io/PIECES/" target="_blank" rel="noopener noreferrer" class="classic-button text-sm py-2 px-4">Lihat Studi Kasus</a>
                                 </div>
                             </article>
                         </div>
@@ -1069,32 +1069,6 @@
             <div class="relative modal-main-content content-hidden">
                 <button class="modal-close-btn absolute -top-10 right-0 text-[#fdf6e3] text-5xl">&times;</button>
                 <img class="modal-image max-h-[85vh] max-w-[90vw] h-auto w-auto" src="" alt="Tampilan Penuh Sertifikat" onerror="this.onerror=null;this.src='https://placehold.co/800x600/3A352F/D4C8B5?text=Image+Not+Found';">
-            </div>
-        </div>
-    </div>
-
-    <div id="mobilbekas-modal" class="modal-overlay" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="mobilbekas-modal-title">
-        <div class="modal-content" style="height: auto; max-width: 800px;">
-            <div class="modal-header">
-                <h5 id="mobilbekas-modal-title" class="modal-title">Studi Kasus: Modernisasi Jual Beli Mobil Bekas</h5>
-                <button class="modal-close-btn" aria-label="Tutup">&times;</button>
-            </div>
-            <div class="modal-body p-8">
-                <div class="modal-loader"><div class="modal-loader-content"><svg class="modal-loader-svg" viewBox="0 0 150 150"><circle class="modal-progress-ring__circle" stroke-width="4" fill="transparent" r="65" cx="75" cy="75"/></svg><div class="modal-loader-text">The Engineering</div></div></div>
-                <div class="modal-main-content content-hidden">
-                    <h4 class="text-xl font-bold mb-2">Latar Belakang</h4>
-                    <p class="text-justify mb-4">
-                        Di masa lampau, jual beli mobil bekas kerap dilakukan secara konvensional. Para penjual biasanya memasarkan mobilnya lewat iklan di koran, yang saat itu menjadi media utama untuk mempertemukan penjual dan pembeli. Seiring perkembangan zaman dan kemajuan teknologi, proses tersebut kini beralih ke media sosial dan platform online, sehingga jangkauannya semakin luas dan cepat. Namun, meski teknologi berkembang, tantangan dan permasalahan dalam transaksi jual beli mobil bekas tetap ada. 
-                    </p>
-                    <h4 class="text-xl font-bold mb-2">Tantangan dan Permasalahan</h4>
-                    <p class="text-justify mb-4">
-                        Salah satu kendala utama adalah <strong>keamanan</strong>. Tidak jarang muncul kekhawatiran terkait validitas kendaraan, seperti apakah mobil tersebut bukan hasil tindak kriminal atau apakah transaksi dilakukan dengan pihak yang benar-benar dapat dipercaya. Kasus lain yang kerap terjadi adalah mobil dibawa kabur oleh oknum calon pembeli yang berpura-pura berminat. Selain itu, proses <strong>pengecekan kondisi mobil</strong> juga menjadi tantangan tersendiri. Setiap calon pembeli biasanya ingin memeriksa mobil secara langsung, yang tentunya memakan banyak waktu dan tenaga, terutama jika jumlah calon pembelinya cukup banyak.
-                    </p>
-                    <h4 class="text-xl font-bold mb-2">Kebutuhan Akan Inovasi Digital</h4>
-                     <p class="text-justify mb-4">
-                        Sebagian orang memilih menjual mobil bekas melalui dealer atau pedagang mobil bekas. Cara ini memang lebih praktis karena pihak dealer biasanya sudah memiliki sistem pengecekan sendiri. Namun, konsekuensinya adalah harga yang ditawarkan sering kali jauh di bawah harga pasar, sehingga penjual merasa dirugikan. Dengan berbagai permasalahan tersebut, dunia digital modern menuntut hadirnya sistem informasi yang inovatif. Sistem ini diharapkan mampu menggabungkan kemudahan teknologi dengan keamanan transaksi, menyediakan fitur pengecekan yang efisien, serta memastikan harga yang lebih adil bagi penjual. Transformasi dari era iklan di koran klasik menuju platform digital bukan sekadar perubahan media, tetapi juga upaya membangun ekosistem jual beli mobil bekas yang transparan, aman, dan menguntungkan bagi semua pihak.
-                    </p>
-                </div>
             </div>
         </div>
     </div>
