--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Dijkstra/dijkstra.css">
 </head>
 <body class="bg-[#2C2720]">
 
@@ -604,3 +604,5 @@
 
 </body>
 </html>
+" and have a query about it.
+
