--- a/index.html
+++ b/index.html
@@ -600,9 +600,8 @@
         </div>
     </div>
 
-    <script src="script.js" defer></script>
+    <script src="Dijkstra/sentinel.js" defer></script>
 
 </body>
 </html>
-" and have a query about it.
 
