--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             </div>
                         </header>
                         <div class="fancy-divider"></div>
-                        <h3 class="text-3xl font-bold text-center mb-10 animate-on-scroll">Laporan Utama: Proyek Unggulan</h3>
+                        <h3 class="text-3xl font-bold text-center mb-10 animate-on-scroll">Laporan Utama: Sebuah Antologi Eksperimen</h3>
                         <div class="space-y-12">
                             <article class="article-frame animate-on-scroll animation-delay-200">
                                 <a href="https://jurnal.amikom.ac.id/index.php/infos/article/view/965" target="_blank" rel="noopener noreferrer">
@@ -612,3 +612,4 @@
 
 </body>
 </html>
+
