--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
             </svg>
             <div class="loader-text">
                 <h2>THE<br>ENGINEER</h2>
-                <p>Membuka Cakrawala Ilmu</p>
+                <p>By Sasangka</p>
             </div>
         </div>
     </div>
@@ -2832,3 +2832,4 @@ Switch(config-if)#ip address 10.0.0.2 255.255.255.0
 
 </body>
 </html>
+
