--- a/index.html
+++ b/index.html
@@ -293,6 +293,14 @@
         .sidebar .nav-link.active-page {
             color: var(--text-ink); font-weight: 700;
         }
+
+        /* Memusatkan blok Daftar Isi */
+        #sidebar .space-y-4 {
+            display: table;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         .sidebar .classic-button {
             color: var(--text-ink); border-color: var(--border-gold);
             box-shadow: 3px 3px 0 var(--text-light);
