--- a/index.html
+++ b/index.html
@@ -944,6 +944,18 @@
                         <h3 class="text-3xl font-bold text-center mb-10 animate-on-scroll">Proyek Unggulan</h3>
                         <div class="space-y-12">
                             <article class="article-frame animate-on-scroll animation-delay-200">
+                                <h4 class="text-2xl font-bold mb-2">IMAGE CLASSIFICATION ALGORITMA CONVOLUTIONAL NEURAL NETWORK (CNN)</h4>
+                                <p class="text-sm mb-4">Kategori: Kecerdasan Buatan, Machine Learning, Computer Vision</p>
+                                <p class="text-justify">
+                                    Proyek ini mendalami salah satu pilar utama computer vision modern dengan mengimplementasikan algoritma Convolutional Neural Network (CNN) untuk tugas klasifikasi gambar. Model dilatih untuk mengenali dan membedakan berbagai kelas objek dari dataset gambar, menunjukkan pemahaman mendalam tentang arsitektur deep learning dan aplikasinya dalam analisis visual.
+                                </p>
+                                <div class="text-right mt-6 flex justify-end gap-4">
+                                    <button data-modal-target="#cnn-doc-modal" data-doc-id="17CLeDEZGMRex0O3yFGt6Bm2CJs-zb1K8" class="classic-button text-sm py-2 px-4">Buka Dokumen</button>
+                                    <button data-modal-target="#cnn-sim-modal" data-iframe-src="https://affinecipher-0.github.io/Algoritma-CNN/" class="classic-button text-sm py-2 px-4">Lihat Simulasi</button>
+                                    <a href="https://github.com/AffineCipher-0/Algoritma-CNN" target="_blank" rel="noopener noreferrer" class="classic-button text-sm py-2 px-4">Lihat Repositori</a>
+                                </div>
+                            </article>
+                            <article class="article-frame animate-on-scroll animation-delay-400">
                                 <a href="https://jurnal.amikom.ac.id/index.php/infos/article/view/965" target="_blank" rel="noopener noreferrer">
                                     <h4 class="text-2xl font-bold mb-2 hover:underline">ALAT PENERJEMAH SANDI MORSE BERBASIS MIKROKONTROLLER</h4>
                                 </a>
@@ -955,7 +967,7 @@
                                     <button data-modal-target="#morse-modal" class="classic-button text-sm py-2 px-4">Baca Selengkapnya</button>
                                 </div>
                             </article>
-                            <article class="article-frame animate-on-scroll animation-delay-400">
+                            <article class="article-frame animate-on-scroll animation-delay-600">
                                 <a href="https://github.com/AffineCipher-0/FinalProjectWeb-Secondhand" target="_blank" rel="noopener noreferrer">
                                     <h4 class="text-2xl font-bold mb-2 hover:underline">Toko Online Barang Bekas – SECONDHAND</h4>
                                 </a>
@@ -967,7 +979,7 @@
                                     <button data-modal-target="#secondhand-modal" class="classic-button text-sm py-2 px-4">Lihat Detail Proyek</button>
                                 </div>
                             </article>
-                            <article class="article-frame animate-on-scroll animation-delay-600">
+                            <article class="article-frame animate-on-scroll animation-delay-800">
                                 <h4 class="text-2xl font-bold mb-2">Software Requirement Specification untuk Greenhouse Otomatisasi Hidroponik</h4>
                                 <p class="text-sm mb-4">Kategori: IoT, Perancangan Perangkat Lunak, Pertanian Cerdas, Perancangan Sistem, Client-Server</p>
                                 <p class="text-justify">
@@ -978,7 +990,7 @@
                                     <button data-modal-target="#greenhouse-prototype-modal" data-iframe-src="https://affinecipher-0.github.io/prototype-greenhouse/" class="classic-button text-sm py-2 px-4">Lihat Prototipe</button>
                                 </div>
                             </article>
-                            <article class="article-frame animate-on-scroll animation-delay-800">
+                            <article class="article-frame animate-on-scroll" style="animation-delay: 1s;">
                                 <h4 class="text-2xl font-bold mb-2">Transformasi Digital Studi Kasus: Modernisasi Proses Jual Beli Mobil Bekas</h4>
                                 <p class="text-sm mb-4">Kategori: Analisis Sistem, Inovasi Digital, Desain Proses Bisnis</p>
                                 <p class="text-justify">
@@ -988,7 +1000,7 @@
                                     <button data-modal-target="#pieces-modal" data-iframe-src="https://affinecipher-0.github.io/PIECES/" class="classic-button text-sm py-2 px-4">Baca Selengkapnya</button>
                                 </div>
                             </article>
-                             <article class="article-frame animate-on-scroll" style="animation-delay: 1s;">
+                             <article class="article-frame animate-on-scroll" style="animation-delay: 1.2s;">
                                 <h4 class="text-2xl font-bold mb-2">Membangun Infrastruktur Jaringan PT AMIKOM</h4>
                                 <p class="text-sm mb-4">Kategori: Desain Infrastruktur Jaringan, VLAN, VPN, Keamanan Jaringan</p>
                                 <p class="text-justify">
@@ -998,7 +1010,7 @@
                                     <button data-modal-target="#network-infra-modal" data-iframe-src="https://affinecipher-0.github.io/Infrastruktur-Jaringan/" class="classic-button text-sm py-2 px-4">Baca Selengkapnya</button>
                                 </div>
                             </article>
-                            <article class="article-frame animate-on-scroll" style="animation-delay: 1.2s;">
+                            <article class="article-frame animate-on-scroll" style="animation-delay: 1.4s;">
                                 <h4 class="text-2xl font-bold mb-2">Desain dan Optimasi Antena Yagi</h4>
                                 <p class="text-sm mb-4">Kategori: Rekayasa Antena, Simulasi Elektromagnetik, Desain Frekuensi Radio (RF)</p>
                                 <p class="text-justify">
@@ -1540,6 +1552,34 @@
         </div>
     </div>
 
+    <div id="cnn-doc-modal" class="modal-overlay" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="cnn-doc-modal-title">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="cnn-doc-modal-title" class="modal-title">Dokumen: Klasifikasi Gambar CNN</h5>
+                <button class="modal-close-btn" aria-label="Tutup">&times;</button>
+            </div>
+            <div class="modal-body p-0">
+                <div class="modal-loader"><div class="modal-loader-content"><svg class="modal-loader-svg" viewBox="0 0 150 150"><circle class="modal-progress-ring__circle" stroke-width="4" fill="transparent" r="65" cx="75" cy="75"/></svg><div class="modal-loader-text">Memuat Dokumen...</div></div></div>
+                <div id="cnn-doc-container" class="modal-main-content content-hidden h-full">
+                     <!-- iFrame will be injected here by JS -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="cnn-sim-modal" class="modal-overlay" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="cnn-sim-modal-title">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="cnn-sim-modal-title" class="modal-title">Simulasi: Klasifikasi Gambar CNN</h5>
+                <button class="modal-close-btn" aria-label="Tutup">&times;</button>
+            </div>
+            <div class="modal-body p-0">
+                <div class="modal-loader"><div class="modal-loader-content"><svg class="modal-loader-svg" viewBox="0 0 150 150"><circle class="modal-progress-ring__circle" stroke-width="4" fill="transparent" r="65" cx="75" cy="75"/></svg><div class="modal-loader-text">Memuat...</div></div></div>
+                <iframe class="modal-iframe modal-main-content content-hidden h-full w-full" src="about:blank"></iframe>
+            </div>
+        </div>
+    </div>
+
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -1784,11 +1824,11 @@
                     
                     // Handle Google Drive embed
                     const docId = button.dataset.docId;
-                    if (docId && modalId === '#srs-doc-modal') {
+                    if (docId) { 
                         const embedUrl = `https://drive.google.com/file/d/${docId}/preview`;
-                        const container = modal.querySelector('#srs-doc-container');
+                        const container = modal.querySelector('.modal-body > .modal-main-content[id]'); 
                         if (container) {
-                            container.innerHTML = `<iframe src="${embedUrl}" class="w-full h-full border-none"></iframe>`;
+                            container.innerHTML = `<iframe src="${embedUrl}" class="w-full h-full border-none" allow="fullscreen"></iframe>`;
                         }
                     }
                     
@@ -2183,4 +2223,6 @@
 
 </body>
 </html>
+
+
 
