--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,7 @@
                         Proyek ini dikembangkan menggunakan **PHP (Natif)** untuk logika backend, **MySQL** untuk basis data, dan kombinasi **HTML, CSS, dan JavaScript** untuk antarmuka pengguna. Ini menampilkan pemahaman kuat tentang arsitektur e-commerce dan praktik terbaik dalam pengembangan web.
                     </p>
                     <div class="text-right mt-6">
-                        <a href="https://github.com/AffineCipher-0/FinalProjectWeb-Secondhand" target="_blank" rel="noopener noreferrer" class="classic-button text-sm py-2 px-4">Lihat di GitHub</a>
+                        <a href="https://github.com/AffineCipher-0/FinalProjectWeb-Secondhand" target="_blank" rel="noopener noreferrer" class="classic-button text-sm py-2 px-4">Lihat Repositori</a>
                     </div>
                 </div>
             </div>
@@ -2223,6 +2223,7 @@
 
 </body>
 </html>
+
 
 
 
