--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoritma Peradaban | Portofolio Gatot Sasangka</title>
+    <title>Algoritma | Portofolio Gatot Sasangka</title>
 
     <meta name="description" content="Portofolio Gatot Sasangka yang disajikan dalam tema Baitul Hikmah, menampilkan proyek-proyek di bidang Jaringan, IoT, AI, dan Pemrograman Web.">
     <meta name="keywords" content="Gatot Sasangka, portofolio, insinyur jaringan, IoT, AI, pengembangan web, Baitul Hikmah, astrolab, sasangkagatot@gmail.com, CV">
-    <meta property="og:title" content="Algoritma Peradaban | Portofolio Gatot Sasangka">
+    <meta property="og:title" content="Algoritma | Portofolio Gatot Sasangka">
     <meta property="og:description" content="Menjelajahi proyek-proyek inovatif dengan semangat intelektual Zaman Keemasan.">
     <meta property="og:image" content="https://placehold.co/1200x630/1a2a44/c7a55b?text=Algoritma+Peradaban">
     <meta property="og:url" content="https://affinecipher-0.github.io/Sasangka/">
@@ -843,7 +843,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6">
                                 <div class="architectural-header">
-                                     <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Algoritma Peradaban</h1>
+                                     <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Algoritma</h1>
                                      <div class="text-sm tracking-widest flex flex-col md:flex-row justify-center md:justify-between items-center text-[var(--text-light)]">
                                          <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                          <span class="live-datetime mt-2 md:mt-0"></span>
@@ -2223,6 +2223,7 @@
 
 </body>
 </html>
+
 
 
 
