--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                                     Tujuan utama proyek ini adalah untuk mendemonstrasikan proses rekayasa antena secara menyeluruh, mulai dari perhitungan teoretis awal, modifikasi desain secara manual, hingga optimasi otomatis menggunakan perangkat lunak simulasi. Proyek ini menjembatani konsep teori elektromagnetik dengan aplikasi praktis untuk menghasilkan sebuah antena Yagi 6 elemen yang memiliki kinerja tinggi dan terukur pada frekuensi target 1200 MHz.
                                 </p>
                                 <div class="text-right mt-6">
-                                    <button data-modal-target="#yagi-antenna-modal" data-iframe-src="https://affinecipher-0.github.io/TeknologiJaringanNirkabel/" class="classic-button text-sm py-2 px-4">Lihat Selengkapnya</button>
+                                    <button data-modal-target="#yagi-antenna-modal" data-iframe-src="https://affinecipher-0.github.io/TeknologiJaringanNirkabel/" class="classic-button text-sm py-2 px-4">Baca Selengkapnya</button>
                                 </div>
                             </article>
                         </div>
@@ -2223,6 +2223,7 @@
 
 </body>
 </html>
+
 
 
 
