--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                                     Melompat ke era '90-an, saat World Wide Web mulai membuka gerbang perdagangan global. Proyek ini mereplikasi semangat awal e-commerce dengan membangun 'Secondhand', sebuah platform fungsional untuk jual-beli barang bekas, lengkap dengan sistem manajemen admin yang komprehensif.
                                 </p>
                                 <div class="text-right mt-6">
-                                    <button data-modal-target="#secondhand-modal" class="classic-button text-sm py-2 px-4">Lihat Detail Proyek</button>
+                                    <button data-modal-target="#secondhand-modal" class="classic-button text-sm py-2 px-4">Lihat Repositori</button>
                                 </div>
                             </article>
                             <article class="article-frame animate-on-scroll animation-delay-800">
@@ -2223,6 +2223,7 @@
 
 </body>
 </html>
+
 
 
 
