--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
                 </main>
 
                 <footer class="page-footer">
-                    <p class="footer-copyright">&copy; 2025 GATOT SASANGKA | DIRANCANG DENGAN BERPIKIR</p>
+                    <p class="footer-copyright">&copy; 2025 GATOT SASANGKA | Dirancang Dengan Penuh Dedikasi</p>
                 </footer>
 
             </div>
@@ -2223,6 +2223,7 @@
 
 </body>
 </html>
+
 
 
 
