--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
                                 </p>
                                 <div class="text-right mt-6 flex justify-end gap-4">
                                     <button data-modal-target="#cnn-doc-modal" data-doc-id="17CLeDEZGMRex0O3yFGt6Bm2CJs-zb1K8" class="classic-button text-sm py-2 px-4">Buka Dokumen</button>
-                                    <button data-modal-target="#cnn-sim-modal" data-iframe-src="https://affinecipher-0.github.io/Algoritma-CNN/" class="classic-button text-sm py-2 px-4">Lihat Simulasi</button>
+                                    <button data-modal-target="#cnn-sim-modal" data-iframe-src="https://affinecipher-0.github.io/Algoritma-CNN/" class="classic-button text-sm py-2 px-4">Lihat Cara Kerja</button>
                                     <a href="https://github.com/AffineCipher-0/Algoritma-CNN" target="_blank" rel="noopener noreferrer" class="classic-button text-sm py-2 px-4">Lihat Repositori</a>
                                 </div>
                             </article>
@@ -2223,6 +2223,7 @@
 
 </body>
 </html>
+
 
 
 
